<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutTelaSobre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="335dp"
        android:layout_height="246dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_utfpr" />

    <TextView
        android:id="@+id/textViewNomePosGrad"
        android:layout_width="338dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewNomePosGrad"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewNomeDesenvolvedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewNomeDesenvolvedor"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewInfoSobreAplicativo"
        android:layout_width="337dp"
        android:layout_height="124dp"
        android:layout_marginTop="16dp"
        android:text="@string/infoSobreAplicativo"
        app:layout_constraintEnd_toEndOf="@+id/textViewNomePosGrad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNomeDesenvolvedor"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeDesenvolvedor" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewEmail"
        app:layout_constraintStart_toStartOf="@+id/textViewNomePosGrad"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomePosGrad" />
</androidx.constraintlayout.widget.ConstraintLayout>